force-app/main/default/objects/MobileScreenshotObject__c/MobileScreenshotObject__c.object-meta.xml
<CustomObject>
    <label>MobileScreenshotObject</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MobileScreenshotObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MobileScreenshotObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>