force-app/main/default/objects/MobileScreenshotObject__c/fields/AppPackageIdentifier__c.field-meta.xml
<CustomField>
    <fullName>AppPackageIdentifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AppPackageIdentifier</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>