force-app/main/default/objects/MobileScreenshotObject__c/fields/ScreenDescription__c.field-meta.xml
<CustomField>
    <fullName>ScreenDescription__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ScreenDescription</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>