force-app/main/default/objects/MobileScreenshotObject__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UserId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>